--- a/css/screen/home.css
+++ b/css/screen/home.css
@@ -1,16 +1,30 @@
 .home-menu {
+    position: fixed;
     display: flex;
+    width: 95%;
+    top: 45px;
     justify-content: space-between;
-    margin: 50px 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-size: 20px;
     align-items: center;
+    padding: 0px 15px;
+    background-color: black;
+    z-index: 99;
 }
 
 .home-menu__logo {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Satisfy', cursive;
     font-size: 35px;
+    position: relative;
+    padding-bottom: 15px;
+}
+
+.home-menu__logo i {
+    font-size: 14px;
+    position: absolute;
+    top: 13px;
+    left: 160px;
 }
 
 .home-menu__buttons {
@@ -51,6 +65,7 @@
 
 .home-story {
     position: relative;
+    margin-top: 90px;
     margin-bottom: 20px;
 }
 
@@ -126,4 +141,88 @@
     margin-top: 15px;
     width: 100%;
     height: 50%;
+}
+
+.posting-react {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 20px;
+    font-size: 20px;
+}
+
+.posting-react__column {
+    width: 33%;
+}
+
+.posting-react__column i:nth-child(2) {
+    margin: 0px 15px;
+}
+
+.posting-react__column:nth-child(2) {
+    background-color: #0098FE;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.posting-react__column:last-child {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.posting-details {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 100px;
+}
+
+.posting-details > .loves {
+    display: block;
+    font-weight: 600;
+    font-size: 16px;
+    margin: 10px 0px;
+}
+
+.posting-details__id-context > .context {
+    opacity: 0.9;
+}
+
+.posting-details > .comment {
+    display: block;
+    margin: 10px 0px;
+    opacity: 0.6;
+}
+
+.posting-details__mycomment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.posting-details__mycomment-column img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.posting-details__mycomment-column {
+    display: flex;
+    align-items: center;
+}
+
+.posting-details__mycomment-column > .leave-comment {
+    opacity: 0.6;
+}
+
+.posting-details__mycomment-column:last-child span:nth-child(2) {
+    margin: 0px 15px;
+}
+
+.posting-details__mycomment-column:last-child span {
+    font-size: 20px;
 }
