--- a/css/screen/reels.css
+++ b/css/screen/reels.css
@@ -1,8 +1,88 @@
 /*-- modifier --*/
+.body {
+    position: relative;
+}
+
 .reels-status-bar {
     background-color: none;
 }
 
 .reels-videos {
     margin: 70px 0px;
+}
+
+.reels-videos__title-camera {
+    display: flex;
+    justify-content: space-between;
+    font-size: 30px;
+    margin: 0px 20px;
+}
+
+.reels-videos__context-buttons {
+    width: 100%;
+    height: 300px;
+    margin-top: 400px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.reels-videos__context {
+    margin-top: 200px;
+    margin-left: 15px;
+    width: 90%;
+    align-items: center;
+}
+
+.reels-videos__context img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info span {
+    margin-left: 10px;
+}
+
+.user-info span:last-child {
+    font-size: 13px;
+    padding: 3px 5px;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 5px;
+}
+
+
+.video-info {
+    margin: 15px 0px;
+}
+
+.reels-videos__buttons {
+    width: 10%;
+    margin-right: 15px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 20px;
+}
+
+.reels-videos__buttons img {
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    border-radius: 5px;
+}
+
+.reels-videos__buttons i {
+    margin-top: 10px;
+}
+
+.reels-videos__buttons span {
+    font-size: 15px;
 }
